--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-size-2 publication-title is-bold">
-            <img src="static/images/dove.png" style="width:2em;vertical-align: middle" alt="Logo"/>
-            <span class="dove" style="vertical-align: middle">Comparing Bad Apples to Good Oranges</span>
+            <span class="dove" style="vertical-align: middle">TALC</span>
             </h1>
           <h2 class="subtitle is-3 publication-subtitle">
-            Aligning Large Language Models via Joint Preference Optimization
+            Time-Aligned Captions for Multi-Scene Text-to-Video Generation
+           
             <!-- <br> -->
             <!-- with GPT-4V, Bard, and Other Large Multimodal Models -->
           </h2>
@@ -239,7 +239,7 @@
 </section> -->
 
 
-<section class="section">
+<!-- <section class="section">
   <div class="container" style="margin-top: -150px; margin-bottom: -100px;">
     <div class="columns is-centered m-6">
       <div class="column is-full has-text-centered content">
@@ -251,7 +251,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <section class="section">
