--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="TALC:Time-Aligned Captions for Multi-Scene Text-to-Video Generation">
   <meta name="keywords" content="video,video generation,time-aligned, talc">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TACL</title>
+  <title>TALC</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script> -->
@@ -22,14 +22,8 @@
     gtag('config', 'G-PYVRSFMDRL');
   </script>
 
-<<<<<<< HEAD
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
-=======
-<!--   <link rel="icon" href="./static/images/dove.png"> -->
-
-  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
->>>>>>> 185c36cf89aea368f9cb245af555bd3f151cd24a
 
   <link rel="stylesheet" href="./static/css/bulma.min.css">
   <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
@@ -53,19 +47,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-<<<<<<< HEAD
           <h1 class="title is-1 publication-title">TALC:Time-Aligned Captions for Multi-Scene Text-to-Video Generation</h1>
-=======
-          <h1 class="title is-size-2 publication-title is-bold">
-            <span class="dove" style="vertical-align: middle">TALC</span>
-            </h1>
-          <h2 class="subtitle is-3 publication-subtitle">
-            Time-Aligned Captions for Multi-Scene Text-to-Video Generation
-           
-            <!-- <br> -->
-            <!-- with GPT-4V, Bard, and Other Large Multimodal Models -->
-          </h2>
->>>>>>> 185c36cf89aea368f9cb245af555bd3f151cd24a
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <span class="author-block">
@@ -149,8 +131,6 @@
         <source src="./static/images/videodirectorgpt_teaser.mp4" type="video/mp4">
       </video>
 
-<<<<<<< HEAD
-=======
 
 <!-- <section class="section">
   <div class="container" style="margin-top: -150px; margin-bottom: -100px;">
@@ -162,7 +142,6 @@
               <p> (Left) We show that the conditional preference acquisition method would require the annotators to compare two responses for an identical instruction. (Right) We show that the annotators can also assign rankings jointly over instruction-response pairs. Specifically, the annotator prefers a helpful response (e.g., Apple ... Grape) over a response that ignores the context of the instruction (e.g., wear sunscreen ... litter). Our framework thus elicits preferences that are obfuscated in the prior approach. </p>
             </div>
       </div>
->>>>>>> 185c36cf89aea368f9cb245af555bd3f151cd24a
     </div>
   </div>
 </section> -->
@@ -303,12 +282,9 @@
         <div class="content has-text-justified">
           <p>
             Boiler Content
-<<<<<<< HEAD
-=======
           </p>
           <p>
             In addition, we show generated videos from baseline and TALC.
->>>>>>> 185c36cf89aea368f9cb245af555bd3f151cd24a
           </p>
           
         </div>
@@ -322,39 +298,6 @@
             </div>
             <br>
             <div class="example-gifs">
-<<<<<<< HEAD
-              <div>
-                <p><b>Baseline</b></p>
-                <img src="./static/images/17_talc.gif" alt="Teaser" width="80%">
-              </div>
-              <div>
-                <p><b>TALC(Ours)</b></p>
-                <img src="./static/images/17_talc.gif" alt="Teaser" width="80%">
-              </div>
-            </div>
-            <br>
-          <p></p>
-          </div>
-          <div class="content example">
-            <div class="example-prompt" style="text-align: left; width: 80%;margin:auto">
-              Scene 1: A knife slices through a red chili pepper.<br>
-              Scene 2: Fingers remove the seeds from the chili pepper.<br>
-              Scene 3: The chili peppers are cut into small pieces.<br>
-              Scene 4: An orange is peeled with a peeler.<br>
-              </div>
-              <br>
-              <div class="example-gifs">
-                  <div>
-                    <p><b>Baseline</b></p>
-                    <img src="./static/images/26_talc.gif" alt="Teaser" width="80%">
-                  </div>
-                  <div>
-                    <p><b>TALC(Ours)</b></p>
-                    <img src="./static/images/26_talc.gif" alt="Teaser" width="80%">
-                  </div>
-            </div>
-            <br>
-=======
                 <div>
                   <p><b>Baseline</b></p>
                   <img src="./static/images/17_talc.gif" alt="Teaser" width="80%">
@@ -386,7 +329,6 @@
                 </div>
             </div>
             <br>
->>>>>>> 185c36cf89aea368f9cb245af555bd3f151cd24a
           <p>Caption</p>
           </div>
           <hr>
