--- a/index.html
+++ b/index.html
@@ -314,18 +314,18 @@
           <!-- example -->
           <div class="content example">
             <div class="example-prompt" style="text-align: left; width: 80%;margin:auto">
-              Scene 1: Spiderman is surfing on the waves.<br>
-              Scene 2: Then, Darth Vader is surfing on the same waves.<br>
+              Scene 1: Superman is surfing on the waves.<br>
+              Scene 2: The Superman falls into the water..<br>
             </div>
             <br>
             <div class="example-gifs">
                 <div>
                   <p><b>Baseline</b></p>
-                  <img src="./static/images/1_talc.gif" alt="Teaser" width="80%">
+                  <img src="./static/images/7_baseline.gif" alt="Teaser" width="80%">
                 </div>
                 <div>
                   <p><b>TALC (Ours)</b></p>
-                  <img src="./static/images/1_talc.gif" alt="Teaser" width="80%">
+                  <img src="./static/images/7_talc.gif" alt="Teaser" width="80%">
                 </div>
             </div>
             <br>
@@ -342,7 +342,7 @@
             <div class="example-gifs">
                 <div>
                   <p><b>Baseline</b></p>
-                  <img src="./static/images/17_talc.gif" alt="Teaser" width="80%">
+                  <img src="./static/images/17_baseline.gif" alt="Teaser" width="80%">
                 </div>
                 <div>
                   <p><b>TALC (Ours)</b></p>
@@ -356,20 +356,20 @@
           <!-- example -->
           <div class="content example">
             <div class="example-prompt" style="text-align: left; width: 80%;margin:auto">
-              Scene 1: A knife slices through a red chili pepper.<br>
-              Scene 2: Fingers remove the seeds from the chili pepper.<br>
-              Scene 3: The chili peppers are cut into small pieces.<br>
-              Scene 4: An orange is peeled with a peeler.<br>
+              Scene 1: A cook pours the batter into a pan.<br>
+              Scene 2: The cook stirs the batter in the pan.<br>
+              Scene 3: The cook puts the cake on the table.<br>
+              Scene 4: The cook cuts the cake on the table.<br>
             </div>
             <br>
             <div class="example-gifs">
                 <div>
                   <p><b>Baseline</b></p>
-                  <img src="./static/images/26_talc.gif" alt="Teaser" width="80%">
+                  <img src="./static/images/32_baseline.gif" alt="Teaser" width="80%">
                 </div>
                 <div>
                   <p><b>TALC (Ours)</b></p>
-                  <img src="./static/images/26_talc.gif" alt="Teaser" width="80%">
+                  <img src="./static/images/32_baseline.gif" alt="Teaser" width="80%">
                 </div>
             </div>
             <br>
@@ -388,7 +388,7 @@
             <div class="example-gifs">
                 <div>
                   <p><b>Baseline</b></p>
-                  <img src="./static/images/20_talc.gif" alt="Teaser" width="80%">
+                  <img src="./static/images/20_baseline.gif" alt="Teaser" width="80%">
                 </div>
                 <div>
                   <p><b>TALC (Ours)</b></p>
@@ -409,11 +409,33 @@
             <div class="example-gifs">
                 <div>
                   <p><b>Baseline</b></p>
-                  <img src="./static/images/31_talc.gif" alt="Teaser" width="80%">
+                  <img src="./static/images/31_baseline.gif" alt="Teaser" width="80%">
                 </div>
                 <div>
                   <p><b>TALC (Ours)</b></p>
                   <img src="./static/images/31_talc.gif" alt="Teaser" width="80%">
+                </div>
+            </div>
+            <br>
+          <!-- <p>Caption.</p> -->
+          </div>
+
+           <!-- example -->
+           <div class="content example">
+            <div class="example-prompt" style="text-align: left; width: 80%;margin:auto">
+              Scene 1: A koala climbs a tree.<br>
+              Scene 2: The koala eats the eucalyptus leaves.<br>
+              Scene 3: The koala takes a nap. <br>
+            </div>
+            <br>
+            <div class="example-gifs">
+                <div>
+                  <p><b>Baseline</b></p>
+                  <img src="./static/images/30_baseline.gif" alt="Teaser" width="80%">
+                </div>
+                <div>
+                  <p><b>TALC (Ours)</b></p>
+                  <img src="./static/images/30_talc.gif" alt="Teaser" width="80%">
                 </div>
             </div>
             <br>
