--- a/index.html
+++ b/index.html
@@ -192,11 +192,13 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths"></div>
+      <div class="box m-5">
         <img src="./static/images/main_figure.png" alt="Main Figure" width="80%">
         <p>
           (a) Generating video on the merged descriptions, leads to a poor text-video alignment. (b) Generating videos for the individual text descriptions and concatenate them temporally, leads to a lack of background consistency.
           (c) Our approach (TALC) enhances the scene-level text-video alignment and maintains background consistency.
         </p>
+      </div>
 
       </div>
     </div>
