--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Experiments</h2>
 
-        <img src="./static/images/talc.png" alt="Teaser" width="80%">
+        <img src="./static/images/results.png" alt="Teaser" width="80%">
         <div class="content has-text-justified">
           <b>Figure 4: Automatic evaluation results for (a) ModelScope and (b) Lumiere.</b> 
           In (a), we observe that TALC-finetuned ModelScope model achieves the highest overall score, that is the average of the visual consistency and text adherence scores. 
