--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
 
 <!-- Main Figure -->
 <section class="section">
-  <div class="container">
+  <div class="container is-max-desktop">
 
-    <div class="columns is-centered m-6">
-      <div class="column is-full has-text-centered content">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
         <div id="results-carousel" class="carousel results-carousel">
           <div class="box m-5">
             <div class="content has-text-justified">
