--- a/index.html
+++ b/index.html
@@ -197,7 +197,9 @@
       <div class="box m-5">
         <img src="./static/images/main_figure.png" alt="Main Figure" width="80%">
         <p>
-          Figure 1: (a) Generating video on the merged descriptions, leads to a poor text-video alignment. (b) Generating videos for the individual text descriptions and concatenate them temporally, leads to a lack of background consistency.
+          Figure 1: (a) Generating video on the merged descriptions, leads to a poor text-video alignment.<br>
+          (b) Generating videos for the individual text descriptions and concatenate them temporally, leads to 
+          a lack of background consistency. <br>
           (c) Our approach (TALC) enhances the scene-level text-video alignment and maintains background consistency.
         </p>
       </div>
@@ -205,6 +207,7 @@
     </div>
   </div>
 </section>
+
 
 
 
@@ -284,7 +287,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Experimental Results</h2>
 
-        <img src="./static/images/results.png" alt="Teaser" width="60%">
+        <img src="./static/images/results.png" alt="Teaser" width="80%">
         <div class="content has-text-justified">
           <b>Figure 4: Automatic evaluation results for (a) ModelScope and (b) Lumiere.</b> 
           In (a), we observe that TALC-finetuned ModelScope model achieves the highest overall score, that is the average of the visual consistency and text adherence scores. 
@@ -475,7 +478,7 @@
 </section>
 
 
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -489,7 +492,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- <section class="section">
   <div class="container is-max-desktop content">
