--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               </span>
               <!-- @hritik: todo Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/hritikbansal"
+                <a href="https://github.com/Hritikbansal/talc"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -122,9 +122,8 @@
                   <span>Code</span>
                   </a>
               </span>
-              <!-- @hritik: todo HuggingFace Link -->
               <span class="link-block">
-                <a href="https://huggingface.co/datasets/videocon/videocon" target="_blank"
+                <a href="https://huggingface.co/datasets/hbXNov/multi_scene_video_text_data" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <p style="font-size:20px">&#x1F917;</p>
@@ -134,7 +133,7 @@
             </span>
             <!-- @hritik: todo HuggingFace Link -->
             <span class="link-block">
-              <a href="https://huggingface.co/videocon/videocon-model" target="_blank"
+              <a href="https://huggingface.co/hbXNov/talc_finetuned_modelscope_t2v" target="_blank"
               class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <p style="font-size:20px">&#x1F917;</p>
@@ -150,9 +149,6 @@
     </div>
   </div>
 </section>
-
-
-
 
 
 <section class="section">
