add new example fig

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
             <span class="author-block">
                 <a href="https://www.linkedin.com/in/michal-yarom-767bb281/" target="_blank">Michal Yarom</a><sup>2</sup>,&nbsp;</span>  
             <span class="author-block">
-              <a href="https://www.linkedin.com/in/idan-szpektor-916183/" target="_blank">Idan Szpektor<sup>*</sup></a><sup>2</sup>,&nbsp;</span>
+              <a href="https://www.linkedin.com/in/idan-szpektor-916183/" target="_blank">Idan Szpektor</a><sup>2</sup>,&nbsp;</span>
             <span class="author-block">
-              <a href="https://aditya-grover.github.io/" target="_blank">Aditya Grover<sup>*</sup></a><sup>1</sup>,&nbsp;</span>
+              <a href="https://aditya-grover.github.io/" target="_blank">Aditya Grover</a><sup>1</sup>,&nbsp;</span>
             <span class="author-block">
-              <a href="https://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang<sup>*</sup></a><sup>1</sup>,&nbsp;</span>
+              <a href="https://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a><sup>1</sup>,&nbsp;</span>
   
             </div>
 
