--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="publication-links">
               <!-- @hritik: todo PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/"
+                <a href="https://arxiv.org/abs/2405.04682"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
